# YSMParser

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
YSMParser/: CMakeLists.txt  main.cpp
YSMParser/algorithms/: CryptoAlgorithms.cpp  CryptoAlgorithms.hpp  NativeAlgorithmsJNI.cpp
YSMParser/parsers/: BufferReader.hpp  YSMParser.cpp  YSMParser.hpp  YSMParserJNI.cpp  YSMParserV1.cpp  YSMParserV1.hpp  YSMParserV2.cpp  YSMParserV2.hpp
YSMParser/parsers/exceptions/: ParserException.hpp
YSMParser/parsers/v3/: PlayerTextureCollector.hpp  YSGPHeaderParser.hpp  YSMParserV3.cpp  YSMParserV3.hpp
YSMParser/platform/: PlatformCompat.hpp
cmake/toolchains/: loongarch64-linux-gnu.cmake
java/: Example.java
java/com/ysm/parser/: YSMNative.java
